--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="avatar" style="background-image: url(&quot;assets/img/avatar.jpg&quot;);"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>Thomas Jones</strong>. I study Computer Science at Kingston University London.</p><a class="btn btn-outline-primary" role="button" href="#">View my CV</a></div>
+                    <p>Hello! I am <strong>Thomas Jones</strong>. I study Computer Science at Kingston University London.</p><a class="btn btn-outline-primary" role="button" href="/assets/Thomas Jones - CV July 2019.pdf">View my CV</a></div>
             </div>
         </section>
     </main>
